--- a/tutorials/tutorial_RawImages_and_Merges.ipynb
+++ b/tutorials/tutorial_RawImages_and_Merges.ipynb
@@ -1483,9 +1483,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac4d9344",
+   "metadata": {},
+   "source": [
+    "### from_filefracday() \n",
+    "\n",
+    "You can directly load the FocalPlane from `filefracday`  (ztfquery knows how to grab the files)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "95499e14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp = raw.RawFocalPlane.from_filefracday(\"20190314080532\", use_dask=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b77dc146",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <td>\n",
+       "            <table>\n",
+       "                <thead>\n",
+       "                    <tr>\n",
+       "                        <td> </td>\n",
+       "                        <th> Array </th>\n",
+       "                        <th> Chunk </th>\n",
+       "                    </tr>\n",
+       "                </thead>\n",
+       "                <tbody>\n",
+       "                    \n",
+       "                    <tr>\n",
+       "                        <th> Bytes </th>\n",
+       "                        <td> 5.17 GiB </td>\n",
+       "                        <td> 72.19 MiB </td>\n",
+       "                    </tr>\n",
+       "                    \n",
+       "                    <tr>\n",
+       "                        <th> Shape </th>\n",
+       "                        <td> (26656, 26040) </td>\n",
+       "                        <td> (3080, 3072) </td>\n",
+       "                    </tr>\n",
+       "                    <tr>\n",
+       "                        <th> Count </th>\n",
+       "                        <td> 686 Tasks </td>\n",
+       "                        <td> 132 Chunks </td>\n",
+       "                    </tr>\n",
+       "                    <tr>\n",
+       "                    <th> Type </th>\n",
+       "                    <td> float64 </td>\n",
+       "                    <td> numpy.ndarray </td>\n",
+       "                    </tr>\n",
+       "                </tbody>\n",
+       "            </table>\n",
+       "        </td>\n",
+       "        <td>\n",
+       "        <svg width=\"167\" height=\"170\" style=\"stroke:rgb(0,0,0);stroke-width:1\" >\n",
+       "\n",
+       "  <!-- Horizontal lines -->\n",
+       "  <line x1=\"0\" y1=\"0\" x2=\"117\" y2=\"0\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"0\" y1=\"13\" x2=\"117\" y2=\"13\" />\n",
+       "  <line x1=\"0\" y1=\"27\" x2=\"117\" y2=\"27\" />\n",
+       "  <line x1=\"0\" y1=\"30\" x2=\"117\" y2=\"30\" />\n",
+       "  <line x1=\"0\" y1=\"44\" x2=\"117\" y2=\"44\" />\n",
+       "  <line x1=\"0\" y1=\"58\" x2=\"117\" y2=\"58\" />\n",
+       "  <line x1=\"0\" y1=\"61\" x2=\"117\" y2=\"61\" />\n",
+       "  <line x1=\"0\" y1=\"75\" x2=\"117\" y2=\"75\" />\n",
+       "  <line x1=\"0\" y1=\"89\" x2=\"117\" y2=\"89\" />\n",
+       "  <line x1=\"0\" y1=\"92\" x2=\"117\" y2=\"92\" />\n",
+       "  <line x1=\"0\" y1=\"106\" x2=\"117\" y2=\"106\" />\n",
+       "  <line x1=\"0\" y1=\"120\" x2=\"117\" y2=\"120\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Vertical lines -->\n",
+       "  <line x1=\"0\" y1=\"0\" x2=\"0\" y2=\"120\" style=\"stroke-width:2\" />\n",
+       "  <line x1=\"13\" y1=\"0\" x2=\"13\" y2=\"120\" />\n",
+       "  <line x1=\"27\" y1=\"0\" x2=\"27\" y2=\"120\" />\n",
+       "  <line x1=\"29\" y1=\"0\" x2=\"29\" y2=\"120\" />\n",
+       "  <line x1=\"43\" y1=\"0\" x2=\"43\" y2=\"120\" />\n",
+       "  <line x1=\"57\" y1=\"0\" x2=\"57\" y2=\"120\" />\n",
+       "  <line x1=\"58\" y1=\"0\" x2=\"58\" y2=\"120\" />\n",
+       "  <line x1=\"59\" y1=\"0\" x2=\"59\" y2=\"120\" />\n",
+       "  <line x1=\"73\" y1=\"0\" x2=\"73\" y2=\"120\" />\n",
+       "  <line x1=\"87\" y1=\"0\" x2=\"87\" y2=\"120\" />\n",
+       "  <line x1=\"89\" y1=\"0\" x2=\"89\" y2=\"120\" />\n",
+       "  <line x1=\"103\" y1=\"0\" x2=\"103\" y2=\"120\" />\n",
+       "  <line x1=\"117\" y1=\"0\" x2=\"117\" y2=\"120\" style=\"stroke-width:2\" />\n",
+       "\n",
+       "  <!-- Colored Rectangle -->\n",
+       "  <polygon points=\"0.0,0.0 117.22689075630252,0.0 117.22689075630252,120.0 0.0,120.0\" style=\"fill:#ECB172A0;stroke-width:0\"/>\n",
+       "\n",
+       "  <!-- Text -->\n",
+       "  <text x=\"58.613445\" y=\"140.000000\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" >26040</text>\n",
+       "  <text x=\"137.226891\" y=\"60.000000\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" transform=\"rotate(-90,137.226891,60.000000)\">26656</text>\n",
+       "</svg>\n",
+       "        </td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "dask.array<concatenate, shape=(26656, 26040), dtype=float64, chunksize=(3080, 3072), chunktype=numpy.ndarray>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fp.get_data()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95499e14",
+   "id": "bcb19557",
    "metadata": {},
    "outputs": [],
    "source": []
