--- a/docs/notebooks/ztfimg_rawccd_rawquadrant.ipynb
+++ b/docs/notebooks/ztfimg_rawccd_rawquadrant.ipynb
@@ -5,7 +5,7 @@
    "id": "2a5d1916",
    "metadata": {},
    "source": [
-    "# Raw Data: image alignment and overscan\n",
+    "# Raw data: image alignment and overscan\n",
     "\n",
     "ZTF raw data fits.fz files contains 8 entries: 4 data (the 4 read-out channel that will become the 4 quadrants) and 4 overscan (one per read-out channel). \n",
     "\n",
@@ -22,7 +22,8 @@
     "\n",
     "\n",
     "### load a RawCCD\n",
-    "the easiest and most natural way to load a rawccd object is to use the `from_filename` class method (see other from_ methods)"
+    "\n",
+    "the easiest and most natural way to load a rawccd object is to use the `from_filename` class method (see other from_ methods)."
    ]
   },
   {
@@ -515,18 +516,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbf041f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "f91224eb",
    "metadata": {},
    "source": [
+    "***\n",
     "## Access Science Image from Raw\n",
     "\n",
     "both `RawCCD` and `RawQuadrant` have ways to easily access their corresponding science image"
