--- a/docs/notebooks/quadrant_ccd_focalplane.ipynb
+++ b/docs/notebooks/quadrant_ccd_focalplane.ipynb
@@ -18,25 +18,25 @@
     "\n",
     "### ztfimg objects and their connections\n",
     "\n",
-    "The data computation is made at the `Quadrant` level. The `CCD` object is a collection of `quadrant`s, while the `FocalPlane` object is a collection of `CCD`s. \n",
+    "The data and header access is made at the `Quadrant` level. A `CCD` object is a collection of `quadrant`s, while the `FocalPlane`is a collection of `CCD`s. \n",
     "\n",
-    "Under usual `ztfquery` file structure environment, it is easy to access the filepath of various element of the CCD or focal plane. For instance, given any quadrant filename, the `from_single_filename()` method of `CCD` and `FocalPlane` uses `ztfquery` to access the 3 missing quadrants to form a `CCD` or the 63 missing ones to form the `FocalPlane`.\n",
+    "Under usual `ztfquery` file structure environment, it is easy to retrieve the filepath of various elements of the CCD or focal plane given a quadrant filename. For instance, given any quadrant filename, the `from_single_filename()` method of `CCD` and `FocalPlane` uses `ztfquery` to access the 3 missing quadrants to form a `CCD` or the 63 ones to form the `FocalPlane`.\n",
     "\n",
-    "Conversely, since `CCD` are collections of `Quadrant`, their `.quadrants` attribute is a dictionary of `Quadrant` and the `get_quadrant()` method provide an easy access to it. Similarly, `FocalPlane` have a `.ccds` attribute and `get_ccd()` and `get_quadrant()` methods enables the user to access a given `CCD` or `Quadrant` object. **Careful**, the CCD method `get_quadrant()` expects a qid (1->4) while the FocalPlane `get_quadrant()` methods expects a rcid (0->63).\n",
+    "Conversely, since `CCD` is a collection of `Quadrant`, their `.quadrants` attribute is a dictionary of `Quadrant` and the `get_quadrant(qid)` method provides an easy access to any of them. Similarly, `FocalPlane` have a `.ccds` attribute and `get_ccd(ccdid)` and `get_quadrant(rcid)` methods enable to access a given `CCD` or `Quadrant` object. **Careful**, the CCD method `get_quadrant(qid)` expects a qid (1->4) while the FocalPlane `get_quadrant(rcid)` methods expects a rcid (0->63).\n",
     "\n",
-    "To conserve the symmetry, the `Quadrant` object have a `get_ccd()` method that calls `CCD.from_single_filename()` using it's own filename and a `get_focalplane` that does the same for `FocalPlane`. CCD also have a `get_focalplane` doing the same using its first quadrant filename.\n",
+    "To conserve the symmetry, a `Quadrant` object has a `get_ccd()` method that calls `CCD.from_single_filename()` using it's own filename and a `get_focalplane` that does the same for `FocalPlane` ; a `CCD` also has a `get_focalplane` doing the same using its first quadrant's filename.\n",
     "\n",
     "### Base, Raw and Science\n",
     "\n",
-    "The aforementioned connections between `Quadrant`, `CCD` and `FocalPlane` hold for any kind of Images (Base, Raw or Science). A `ScienceQuadrant` will build a `ScienceCCD` and `ScienceFocalPlane` when called `get_ccd()` or `get_focalplane()` and so on. \n",
+    "The aforementioned connections between `Quadrant`, `CCD` and `FocalPlane` hold for any kind of Images (Base, Raw or Science). A `ScienceQuadrant` will build a `ScienceCCD` and `ScienceFocalPlane` when calling `get_ccd()` or `get_focalplane()` and so on. \n",
     "\n",
     "### Careful with memory\n",
-    "A `FocalPlane` is made of 64 quadrant and  `ScienceQuadrant` are made of image + mask data. So loading a `FocalPlane` can blow up you memory. It is thus suggested to use dask when working with FocalPlane and make sure not to compute too large data on a single memory access ; `data` from FocalPlane ~5GB."
+    "A `FocalPlane` is made of 64 quadrants and  `ScienceQuadrant` are made of image + mask data. So loading a `FocalPlane` can blow up your RAM. It is thus suggested to use dask when working with `FocalPlane`s and make sure not to compute too large data on a single memory node ; `data` from FocalPlane ~5GB."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "26b501be",
+   "id": "2e9bb601",
    "metadata": {},
    "source": [
     "***\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e90aea83",
+   "id": "52692059",
    "metadata": {},
    "source": [
     "### Now let's get its CCD.\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "57a12323",
+   "id": "5701f021",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "589a5d1a",
+   "id": "16b26e3e",
    "metadata": {},
    "source": [
     "2. The shortcut `get_ccd()` method. (it does the manual version for you)"
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a0c9f799",
+   "id": "0a2b2e8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ed2ea53",
+   "id": "4d0aaed7",
    "metadata": {},
    "source": [
     "let's have a look"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0be5d33d",
+   "id": "5fa5d520",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "51bc349f",
+   "id": "2f297251",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d62c830e",
+   "id": "80b9eaa4",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a6538e3c",
+   "id": "58cce028",
    "metadata": {},
    "outputs": [
     {
@@ -253,24 +253,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b86846d3",
+   "id": "a8186f7c",
    "metadata": {},
    "source": [
     "### Now let's get the FocalPlane\n",
     "\n",
-    "We will use dask to manage the RAM. You also have the manual and the shortcut get_focalplane() method like for CCDs."
+    "We will use dask to manage the RAM. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ab422ec4",
+   "id": "c0c596e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import dask\n",
     "from dask.distributed import Client\n",
     "client = Client()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b67b06b2",
+   "metadata": {},
+   "source": [
+    "As for quadrant->ccd, the manual FocalPlane. and the shortcut get_focalplane() method like for CCDs."
    ]
   },
   {
@@ -371,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cd1d9c28",
+   "id": "8fbf1450",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ccea534",
+   "id": "b059bb87",
    "metadata": {},
    "source": [
     "**tip**: the rebin methods bins and average the pixels X by X. It fastens a lot the plotting (and reduce the local RAM usage) for quick look. X must be a multiple of the array shape, so 2,4,8,16 works well"
@@ -501,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a712b3ff",
+   "id": "2f8d3815",
    "metadata": {},
    "source": [
     "## In the other direction\n",
@@ -512,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5fd33614",
+   "id": "b1b8238d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8128cbcd",
+   "id": "a0bbdcfc",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6e3bf79",
+   "id": "b57e2dc1",
    "metadata": {},
    "source": [
     "The CCD 11 from the FocalPlane"
@@ -553,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "744d1e26",
+   "id": "7200cf63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c0e2ee2",
+   "id": "25b49c66",
    "metadata": {},
    "source": [
     "Remark that, since fp is dasked, ccd11 will also be."
@@ -571,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "de1c5739",
+   "id": "92a7927f",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "153a44fd",
+   "id": "e9f02987",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dbe13c0",
+   "id": "924621c4",
    "metadata": {},
    "source": [
     "Or any quadrant from the FocalPlane (rcid)"
@@ -683,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "82e637d9",
+   "id": "7631b03e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a1164a68",
+   "id": "4d1b47ff",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f920923",
+   "id": "e6e845fe",
    "metadata": {},
    "source": [
     "***\n",
@@ -727,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a35e99e5",
+   "id": "7bcb8c9b",
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "295b613b",
+   "id": "7201a93b",
    "metadata": {},
    "source": [
     "Blod numbers are `ccdid`, white number are `rcid` and colors are `qid` (0:blue, 1:orange, 2:green, 3:red)"
