--- a/docs/notebooks/quadrant_ccd_focalplane.ipynb
+++ b/docs/notebooks/quadrant_ccd_focalplane.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e9bb601",
+   "id": "7df97338",
    "metadata": {},
    "source": [
     "***\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52692059",
+   "id": "3e8a6c1d",
    "metadata": {},
    "source": [
     "### Now let's get its CCD.\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5701f021",
+   "id": "7cf5495b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16b26e3e",
+   "id": "bea0b559",
    "metadata": {},
    "source": [
     "2. The shortcut `get_ccd()` method. (it does the manual version for you)"
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0a2b2e8a",
+   "id": "453a2971",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d0aaed7",
+   "id": "c1d55284",
    "metadata": {},
    "source": [
     "let's have a look"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5fa5d520",
+   "id": "904d43c0",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2f297251",
+   "id": "893a92e2",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "80b9eaa4",
+   "id": "9b6d8064",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "58cce028",
+   "id": "b8725fbf",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8186f7c",
+   "id": "18c495a0",
    "metadata": {},
    "source": [
     "### Now let's get the FocalPlane\n",
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c0c596e2",
+   "id": "b487f266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,10 +275,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b67b06b2",
+   "id": "058f51c4",
    "metadata": {},
    "source": [
-    "As for quadrant->ccd, the manual FocalPlane. and the shortcut get_focalplane() method like for CCDs."
+    "As for quadrant->ccd, the manual loading exists as well as the shortcut `get_focalplane()` method ; let's use this one"
    ]
   },
   {
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8fbf1450",
+   "id": "99eb6b79",
    "metadata": {},
    "outputs": [
     {
@@ -478,10 +478,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b059bb87",
+   "id": "b7d39662",
    "metadata": {},
    "source": [
-    "**tip**: the rebin methods bins and average the pixels X by X. It fastens a lot the plotting (and reduce the local RAM usage) for quick look. X must be a multiple of the array shape, so 2,4,8,16 works well"
+    "**tip**: the *rebin* option averages the pixels N by N. It fastens a lot plotting (and reduce the local RAM usage) for quick look. N must be a multiple of the array shape, so 2, 4, 8, 16 works well"
    ]
   },
   {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f8d3815",
+   "id": "8004c76d",
    "metadata": {},
    "source": [
     "## In the other direction\n",
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b1b8238d",
+   "id": "c637e37d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a0bbdcfc",
+   "id": "fe66ffe4",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b57e2dc1",
+   "id": "c6b7748c",
    "metadata": {},
    "source": [
     "The CCD 11 from the FocalPlane"
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7200cf63",
+   "id": "047913a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25b49c66",
+   "id": "bbd65177",
    "metadata": {},
    "source": [
     "Remark that, since fp is dasked, ccd11 will also be."
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "92a7927f",
+   "id": "657adbb0",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e9f02987",
+   "id": "9bf4719d",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "924621c4",
+   "id": "5ea043c8",
    "metadata": {},
    "source": [
     "Or any quadrant from the FocalPlane (rcid)"
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7631b03e",
+   "id": "2c06d469",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4d1b47ff",
+   "id": "ee72eeed",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e845fe",
+   "id": "5f1bc411",
    "metadata": {},
    "source": [
     "***\n",
@@ -735,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7bcb8c9b",
+   "id": "ef1ea5c1",
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7201a93b",
+   "id": "99b78aec",
    "metadata": {},
    "source": [
     "Blod numbers are `ccdid`, white number are `rcid` and colors are `qid` (0:blue, 1:orange, 2:green, 3:red)"
