cleaning get last, first oversan and data

--- a/docs/notebooks/ztfimg_rawccd_rawquadrant.ipynb
+++ b/docs/notebooks/ztfimg_rawccd_rawquadrant.ipynb
@@ -454,12 +454,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "b73b9aa8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([249.46776, 261.8302 , 256.8821 , ..., 255.02402, 253.542  ,\n",
+       "       248.36089], dtype=float32)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "last_data, first_overscan = q2.get_lastdata_firstoverscan()"
+    "last_data, first_overscan = q2.get_lastdata_firstoverscan()\n",
+    "first_overscan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb64e985",
+   "metadata": {},
+   "source": [
+    "or the n-last / n-first while correcting both the data and the overscan for the overscan model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "615f18c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[124.4624  ,  66.784134],\n",
+       "       [136.82428 ,  60.653255],\n",
+       "       [131.87564 ,  63.960884],\n",
+       "       ...,\n",
+       "       [129.33942 ,  66.5751  ],\n",
+       "       [127.85752 ,  66.5808  ],\n",
+       "       [122.676506,  61.967293]], dtype=float32)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_data, first_overscan = q2.get_lastdata_firstoverscan(n=2, corr_overscan=True)\n",
+    "first_overscan"
    ]
   },
   {
