clean internal _call_down, remove isfunc

--- a/docs/notebooks/catalogs.ipynb
+++ b/docs/notebooks/catalogs.ipynb
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0778bdeb",
+   "id": "223ea223",
    "metadata": {},
    "source": [
     "***\n",
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4e868134",
+   "id": "9c25a3bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83b6f03e",
+   "id": "c64ca739",
    "metadata": {},
    "source": [
     "Let's load a “dasked“ quadrant"
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7ad6bc02",
+   "id": "e1811f0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "481ff25f",
+   "id": "098ce97f",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9970de83",
+   "id": "ea5543ab",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cf167e3b",
+   "id": "994ff8be",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "df8bf2df",
+   "id": "a0c7d453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e7c92046",
+   "id": "46cd0418",
    "metadata": {},
    "outputs": [
     {
@@ -1349,10 +1349,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dcd404c",
+   "id": "44fadd3e",
    "metadata": {},
    "source": [
-    "**tip**: you may want to call .persist() for the catalog to actually lauch th"
+    "**tip**: you may want to call .persist() for the catalog to actually launch the downloading as soon as possible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5fcf176e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.close()"
    ]
   }
  ],
